--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -3,4 +3,7 @@
     <string name="localizade">RUS</string>
     <string name="main_menu_play">Играть</string>
     <string name="main_menu_setting">Настройки</string>
+    <string name="pause_menu_resume">Продолжить</string>
+    <string name="pause_menu_restart">Переиграть</string>
+    <string name="pause_menu_return_to_menu">Вернуться в меню</string>
 </resources>
