--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="app_name">Main</string>
     <string name="main_menu_play">Играть</string>
     <string name="main_menu_setting">Настройки</string>
+    <string name="pause_menu_resume">Продолжить</string>
+    <string name="pause_menu_restart">Переиграть</string>
+    <string name="pause_menu_return_to_menu">Вернуться в меню</string>
 </resources>
