added icon and change title

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="localizade">RUS</string>
+    <string name="app_name">Спасти новый год</string>
+
     <string name="main_menu_play">Играть</string>
     <string name="main_menu_setting">Настройки</string>
     <string name="pause_menu_resume">Продолжить</string>
