--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="localizade">ENG</string>
-    <string name="app_name">Main</string>
+    <string name="app_name">Save New Year</string>
+
     <string name="main_menu_play">Играть</string>
     <string name="main_menu_setting">Настройки</string>
     <string name="pause_menu_resume">Продолжить</string>
