added gift at time

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -9,4 +9,5 @@
     <string name="pause_menu_restart">Переиграть</string>
     <string name="pause_menu_return_to_menu">Вернуться в меню</string>
     <string name="pause_menu_best_time">Лучшее время %1s</string>
+    <string name="you_get_one_dift">Вы получили подарок!</string>
 </resources>
