--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -22,4 +22,6 @@
         https://play.google.com/store/apps/details?id=donnu.zolotarev.savenewyear
         Сможешь набрать большое?
     </string>
+    <string name="pause_menu_how_to_play">Как играть</string>
+    <string name="how_to_play_text">Берешь и играешь</string>
 </resources>
