--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -23,7 +23,7 @@
     </string>
     <string name="pause_menu_how_to_play">Как играть</string>
     <string name="how_to_play_text">Управление в игре:\n
-        Для прыжка нажмите и отпустите палец в любом месте экрана. Повторное нажатие на экран, когда игрок в воздухе позволяет приземлится быстрее.\n
+        Для прыжка нажмите и отпустите палец в любом месте экрана. Повторное нажатие на экран, когда игрок находится в воздухе, позволяет приземлится быстрее.\n
         По летящим снежкам также нужно нажимать. По большим два раза, по маленьким - один. Чтобы перебраться через большую яму, нужно нажать и удерживать на палец на коричневом пне перед ней.\n
         Подарки нужно собирать их можно обменять на дополнительную жизнь. За каждые 45 секунд, вы получаете один подарок.\n
         \n
