--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -12,7 +12,7 @@
     <string name="pause_menu_return_to_menu">Вернуться в меню</string>
     <string name="pause_menu_best_time">Лучшее время %1s</string>
     <string name="you_get_one_dift">Вы получили подарок!</string>
-    <string name="you_have_not_gift">Нужно 5 подарков чтобы продолжить!</string>
+    <string name="you_have_not_gift">Не достаточно подарков чтобы продолжить! Желаете их купить?</string>
     <string name="leaderboard_unavaileble">Рекорды сейчас не доступны! Попробуйе позже!</string>
     <string name="achievement_unavaileble">Достижения сейчас не доступны! Попробуйе позже!</string>
     <string name="unavaileble">Данная функция находится в разработке!</string>
