--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="help_congratulations">Congratulations! Now you are ready for this game!</string>
     <string name="try_again">Do not give up! Try again! Not all is obtained from the first time!</string>
     <string name="tutorials">Go through a little tutorial that will help you understand the game</string>
+
+    <string name="get_every_day_bonus">Ты получил %1s подарок! Заходи в игру каждый день и получай больше подарков!</string>
 </resources>
