added skip tuttorials ability

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -39,5 +39,5 @@
     <string name="get_ready">Приготовьтесь!</string>
     <string name="help_congratulations">Поздравляю! Теперь вы готовы к настоящей игре!</string>
     <string name="try_again">Не сдавайтесь! Попробуйте еще раз! Не у всех получается с первого раза!</string>
-    <string name="tutorials">Пройдите небольшой туториал, который поможет вам разобраться в игре</string>
+    <string name="tutorials">Пройдите обучение, который поможет вам разобраться в игре!</string>
 </resources>
