fix showball animate after hit

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -23,8 +23,7 @@
     </string>
     <string name="pause_menu_how_to_play">Как играть</string>
     <string name="how_to_play_text">Управление в игре:\n
-        Для прыжка нажмите и отпустите палец в любом месте экрана. Повторное нажатие на экран, когда игрок находится в воздухе, позволяет приземлится быстрее.\n
-        По летящим снежкам также нужно нажимать. По большим два раза, по маленьким - один. Чтобы перебраться через большую яму, нужно нажать и удерживать на палец на коричневом пне перед ней.\n
+        Для прыжка нажмите в любом месте экрана. Повторное нажатие на экран, когда игрок находится в воздухе, позволяет приземлится быстрее.\n
         Подарки нужно собирать их можно обменять на дополнительную жизнь. За каждые 45 секунд, вы получаете один подарок.\n
         \n
         Приятной игры!
@@ -40,4 +39,8 @@
     <string name="help_congratulations">Поздравляю! Теперь вы готовы к настоящей игре!</string>
     <string name="try_again">Не сдавайтесь! Попробуйте еще раз! Не у всех получается с первого раза!</string>
     <string name="tutorials">Пройдите обучение, который поможет вам разобраться в игре!</string>
+
+    <string name="get_every_day_bonus">Ты получил %1s подарок! Заходи в игру каждый день и получай больше подарков!</string>
+    <string name="try_again_btn">Повторить</string>
+    <string name="skip_tutorial_btn">Пропустить</string>
 </resources>
