--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,15 +22,14 @@
     <string name="leaderboard_unavaileble">Records are now available! Please try again later!</string>
     <string name="achievement_unavaileble">Achievements are now available! Please try again later!</string>
     <string name="unavaileble"> This feature is in the works!</string>
-    <string name="share_chooser_text">Share the result through ..</string>
+    <string name="share_chooser_text">Share the result through ...</string>
     <string name="share_btn_text">Share It</string>
     <string name="share_text">My time %1s in the game Save the New Year
         https://play.google.com/store/apps/details?id=donnu.zolotarev.savenewyear
     </string>
     <string name="pause_menu_how_to_play">How to play</string>
     <string name="how_to_play_text">Control of the game: \n
-         To jump tap your finger anywhere on the screen. The tap on the screen when the player is in the air allows land faster. \n
-         By flying snowballs also need to tap . At most two times, small - one. To move through a large hole, you need to press and hold your finger on the brown on the stump in front of it. \n
+         To jump, press anywhere on the screen. Pressing on the screen when the player is in the air, land allows faster. \n
          Gifts to collect can be exchanged for an extra life. For every 45 seconds, you get one gift. \n
         \n
          Enjoy the game!
@@ -41,12 +40,13 @@
     <string name="rate_letter">Remind me later</string>
     <string name="rate_rate">Rate %1s</string>
     <string name="rate_no">No, thanks</string>
+
     <string name="get_ready">Get ready!</string>
     <string name="help_congratulations">Congratulations! Now you are ready for this game!</string>
     <string name="try_again">Do not give up! Try again! Not all is obtained from the first time!</string>
     <string name="tutorials">Go through a little tutorial that will help you understand the game</string>
 
-    <string name="get_every_day_bonus">Ты получил %1s подарок! Заходи в игру каждый день и получай больше подарков!</string>
-    <string name="try_again_btn">Повторить</string>
-    <string name="skip_tutorial_btn">Пропустить</string>
+    <string name="get_every_day_bonus">You got %1s gifts! Come to the game every day and get more gifts!</string>
+    <string name="try_again_btn">Again</string>
+    <string name="skip_tutorial_btn">Skip</string>
 </resources>
