--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -43,4 +43,5 @@
     <string name="get_every_day_bonus">Ты получил %1s подарок! Заходи в игру каждый день и получай больше подарков!</string>
     <string name="try_again_btn">Повторить</string>
     <string name="skip_tutorial_btn">Пропустить</string>
+    <string name="main_menu_more_game">Больше игр</string>
 </resources>
